--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,4 +4,4 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 # VITE_API_BASE_URL defines the backend API URL for direct connections
 # For production with Railway: https://kpp2-prod.up.railway.app
 # For local development: uncommented to use local backend server
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=http://localhost:8080
