--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react-swc": "^4.0.1",
     "@tanstack/react-query-devtools": "^5.62.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
