--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,32 +11,32 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.518.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^6.28.0",
-    "@tanstack/react-query": "^5.62.0",
-    "axios": "^1.7.9",
-    "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4",
-    "@supabase/supabase-js": "^2.38.4"
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "@tanstack/react-query": "^4.29.0",
+    "axios": "^1.4.0",
+    "tailwindcss": "^3.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "clsx": "^1.2.1",
+    "tailwind-merge": "^1.13.2",
+    "@supabase/supabase-js": "^2.26.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "@tanstack/react-query-devtools": "^5.62.0",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss-import": "^16.1.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "@eslint/js": "^9.0.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@tanstack/react-query-devtools": "^4.29.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "globals": "^13.20.0",
+    "postcss-import": "^15.1.0",
+    "typescript": "^5.0.2",
+    "typescript-eslint": "^7.0.0",
+    "vite": "^4.4.5"
   }
 }
